test_programs/compile_failure/array_length_defaulting/src/main.nr
fn main() {
    let x = std::mem::zeroed();
    foo(x);
}

fn foo<N>(array: [Field; N]) {
    for elem in array {
        println(elem);
    }
}
